fixed secondary scrollbar showing up in sidenav-content due to min-height: 100%

--- a/client/src/app/core/toolbar-sidenav/toolbar-sidenav.component.css
+++ b/client/src/app/core/toolbar-sidenav/toolbar-sidenav.component.css
@@ -65,6 +65,5 @@
 
 .main-content {
     position: relative;
-    min-height: 100%;
     height: auto;
 }
